[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/Main.gd" type="Script" id=2]
[ext_resource path="res://Scene/Boulder.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/Bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/photo-1557682250-33bd709cbe85.jpeg" type="Texture" id=5]
[ext_resource path="res://Scene/ShootingArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/Alien.tscn" type="PackedScene" id=8]

[node name="Main" type="Node"]
script = ExtResource( 2 )
boulder_scene = ExtResource( 3 )
bar_scene = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 100.0
texture = ExtResource( 5 )
stretch_mode = 7

[node name="ShootingArea" parent="." instance=ExtResource( 6 )]

[node name="Bar" parent="." instance=ExtResource( 4 )]

[node name="PlayerPosition" type="Position2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="BarPosition" type="Position2D" parent="."]
position = Vector2( 935, 519 )

[node name="AreaChangeTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Alien" parent="." instance=ExtResource( 8 )]

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="timeout" from="AreaChangeTimer" to="." method="_on_AreaChangeTimer_timeout"]
[connection signal="alien_hit" from="Alien" to="." method="_on_Alien_alien_hit"]
[connection signal="new_game" from="HUD" to="." method="_on_HUD_new_game"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
